# Activity-Sharpness-AI

./: .gitignore  Data Selection.py  README.md  model_comparison_training_knife_sharpness.txt  models_comparison_training.txt  pyproject.toml
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.tsx
models/: Data Cleaning2.py  chunk_data.py  common.py  data.py  eda.py  pre_process.py  test.py  train.py
models/Data/: data.py  graph.py  pre_process.py
models/Training/: data.py  number_of_selected_features.py  test.py  train.py  tune.py
server/: csv_to_python.py  main.py  selected_features.py  sensor_data.py
server/datasim/: csv_to_json.py  datasim_format
server/datasim/sensor_configs/: P1_Head_final.json  P1_Head_sim.json  P1_L3_sim.json  P1_L5_sim.json  P1_Left Foot_sim.json  P1_Left Forearm_sim.json  P1_Left Hand_sim.json  P1_Left Lower Leg_sim.json  P1_Left Shoulder_sim.json  P1_Left Toe_sim.json  P1_Left Upper Arm_sim.json  P1_Left Upper Leg_sim.json  P1_Neck_sim.json  P1_Pelvis_sim.json  P1_Right Foot_sim.json  P1_Right Forearm_sim.json  P1_Right Hand_sim.json  P1_Right Lower Leg_sim.json  P1_Right Shoulder_sim.json  P1_Right Toe_sim.json  P1_Right Upper Arm_sim.json  P1_Right Upper Leg_sim.json  P1_T12_sim.json  P1_T8_sim.json  P2_Head_sim.json  P2_L3_sim.json  P2_L5_sim.json  P2_Left Foot_sim.json  P2_Left Forearm_sim.json  P2_Left Hand_sim.json  P2_Left Lower Leg_sim.json  P2_Left Shoulder_sim.json  P2_Left Toe_sim.json  P2_Left Upper Arm_sim.json  P2_Left Upper Leg_sim.json  P2_Neck_sim.json  P2_Pelvis_sim.json  (+10 more)
